--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</div>
 	<div style="margin-left: 700px;">
 	   <p>
-	   <a href="file:///D:/%D0%A3%D1%87%D1%91%D0%B1%D0%B0/HTML/Table.html">Zad. 2b</a>
+	   <a href="Table.html">Zad. 2b</a>
 	   </p>
 	</div>
  </body>
